[package]
name = "kindle-tool"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "kindle_tool"
path = "src/lib.rs"

[[bin]]
name = "kindle"
path = "src/main.rs"

[dependencies]
binrw = { version = "0.15" }
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }